Added Dark Mode, updated Dashboard logic, and organized Swagger UI
